# lwip-server

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: unit-tests.yml
client/: client.py
cmake/: arm-none-eabi.cmake  third-party.cmake  unittests.cmake
include/: FreeRTOSConfig.h  lwipopts.h  stm32h7xx_hal_conf.h
include/arch/: cc.h
include/lwipserver/base/: IEth.h
include/lwipserver/concepts/: Base.h  Eth.h
include/lwipserver/drivers/: Lan8742.h
include/lwipserver/freertos/: Mutex.h  OsTask.h  StreamBuffer.h
include/lwipserver/mocks/: BaseMock.h  EthMock.h
include/lwipserver/network/: EthernetifCpp.h  MqttClient.h  NetworkRTOS.h  TcpEchoServer.h  TcpServer.h
include/lwipserver/stm32h7/: Base.h  DebugUart.h  Ethernetif.h  TxDescriptor.h
include/lwipserver/time/: Clock.h
include/lwipserver/utils/: DmaRxBuffer.h  LoopTimer.h
src/: Clock.h  EthernetInterface.cpp  EthernetInterface.h  FakeServo.h  Lan8742.cpp  Lan8742.h  Main.cpp  MqttClient.h  Network.cpp  Network.h  TcpEchoServer.h  TcpServer.cpp  TcpServer.h  lwipopts.h
src/app-bare-metal/: Interrupts.cpp  Main.cpp  Network.cpp  Network.h  __Main.cpp  ethernetif.c  ethernetif.h  lwipopts.h
src/app-freertos/: FreeRTOSConfig.h  Interrupts.cpp  MainRTOS.cpp  NetworkRTOS.cpp  NetworkRTOS.h  __eth_freertos.cpp  eth_freertos.cpp  eth_freertos.h  lwipopts.h  timebase.cpp
src/base/: IBase.h  IEth.h
src/common/: Clock.h  MqttClient.cpp  MqttClient.h
src/common/base/: IBase.h
src/common/utils/: DmaRxBuffer.cpp  MainLoopTimer.h
src/network/: MqttClient.cpp  TcpServer.cpp  ethernetif.cpp  sio.cpp
src/stm32h7/: Base.cpp  DebugUart.cpp  Ethernetif.cpp  Interrupts.cpp  Stm32h7Eth.cpp  Syscalls.cpp  Timebase.cpp  Vectors.cpp  stm32h7.ld
src/stm32h7-base/: EthernetifCpp.h  FreeRTOSConfig.h  Stm32h7Base.cpp  Stm32h7Base.h  Stm32h7Eth.h  ethernetif.c  lwipopts.h  lwipopts_common.h  stm32h7.ld  stm32h7_debug_uart.cpp  stm32h7_interrupts.cpp  stm32h7_startup.cpp  stm32h7_system.cpp  stm32h7_vectors.cpp  stm32h7xx_hal_conf.h
src/stm32h7-base/arch/: cc.h  sio.cpp
src/utils/: DmaRxBuffer.cpp  DmaTxBuffer.cpp  DmaTxBuffer.h
tests/: BaseMock.h  EthMock.h  EthernetInterfaceTest.cpp  Lan8742Test.cpp  Main.cpp  lwipopts.h
tests/arch/: cc.h
